# frankenterm

./: .agent-mail.yaml  .gitignore  .gitmodules  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  AGENT_TODO.md  CHANGELOG.md  COMPREHENSIVE_ANALYSIS_OF_franken_mermaid.md  COMPREHENSIVE_ANALYSIS_OF_frankentui.md  COMPREHENSIVE_ANALYSIS_OF_process_triage.md  Cargo.toml  PLAN.md  PLAN_CODEX.md  PLAN_TO_DEEPLY_INTEGRATE_franken_redis_INTO_FRANKENTERM.md  PLAN_TO_DEEPLY_INTEGRATE_frankensqlite_INTO_FRANKENTERM.md  PLAN_TO_DEEPLY_INTEGRATE_process_triage_INTO_FRANKENTERM.md  README.md  RESEARCH_FINDINGS.md  UPGRADE_LOG.md  UPGRADE_TODO.md  claude-upgrade-progress.json  create_aegis_beads.py  create_beads.sh  create_granular_ars_beads.py  fix_deps.sh  fix_jsonl.py  fix_jsonl_v2.py  frankenterm_guide.md  install.sh  sgconfig.yml  test_bug.rs  test_is_cmd.rs  test_safe.rs  update_aegis_beads.py  update_ars_beads_alien.py  wezterm_automata_prompt_je.md  wezterm_automation_guide_chatgpt.md
crates/frankenterm/: Cargo.toml  build.rs
crates/frankenterm-alloc/: Cargo.toml
crates/frankenterm-alloc/benches/: arena_throughput.rs
crates/frankenterm-alloc/src/: lib.rs
crates/frankenterm-alloc/tests/: arena_stress.rs
crates/frankenterm-core/: Cargo.toml  build.rs
crates/frankenterm-core/benches/: auto_tuning.rs  backpressure_performance.rs  bench_common.rs  bocpd.rs  byte_compression.rs  cache_gc.rs  causal_dag.rs  caut_quota_scheduling.rs  compression_bypass.rs  cx_creation.rs  cx_propagation.rs  dashboard_aggregation.rs  dataflow_bench.rs  delta_extraction.rs  differential_snapshot.rs  fork_hardening.rs  fork_hardening_benchmarks.rs  framework_throughput.rs  frankensearch_bench.rs  fts_query.rs  input_latency_bench.rs  ipc_throughput.rs  irl_bench.rs  kalman_watchdog.rs  labruntime_overhead.rs  lockfree_contention.rs  mmap_scrollback.rs  mux_client_ops.rs  mux_pool_scaling.rs  native_events_latency.rs  notification_coalescing.rs  outcome_adapter.rs  outcome_vs_result.rs  pattern_detection.rs  pattern_trigger.rs  pdu_pipelining.rs  pool_benchmark.rs  replay_capture.rs  replay_diff.rs  replay_kernel.rs  (+25 more)
crates/frankenterm-core/fixtures/: semantic_anomaly_vectors.json
crates/frankenterm-core/proptest-regressions/: auto_tune.txt
crates/frankenterm-core/src/: accounts.rs  adaptive_radix_tree.rs  aegis_backpressure.rs  aegis_diagnostics.rs  aegis_entropy_anomaly.rs  agent_config_templates.rs  agent_correlator.rs  agent_detection.rs  agent_mail_bridge.rs  agent_pane_state.rs  agent_provider.rs  alerts.rs  api_schema.rs  approval.rs  ars_blast_radius.rs  ars_compile.rs  ars_drift.rs  ars_evidence.rs  ars_evolve.rs  ars_explain.rs  ars_federation.rs  ars_fst.rs  ars_generalize.rs  ars_intercept.rs  ars_replay.rs  ars_secret_scan.rs  ars_serialize.rs  ars_symbolic_exec.rs  ars_timeout.rs  asupersync_observability.rs  auto_tune.rs  backpressure.rs  backpressure_severity.rs  backup.rs  bayesian_ledger.rs  beads_bridge.rs  beads_types.rs  beta_feedback_loop.rs  bimap.rs  binomial_heap.rs  (+364 more)
crates/frankenterm-core/tests/: agent_provider_bridge_integration.rs  alert_monitor_tests.rs  analytics_cli_tests.rs  approval_labruntime.rs  asupersync_cx_infrastructure.rs  asupersync_spike.rs  asupersync_unix_socket.rs  canary_shadow_integration.rs  cancellation_labruntime.rs  capacity_governor_integration.rs  cass_integration.rs  chaos_planner_dispatcher.rs  chunk_vector_store_lifecycle_tests.rs  cleanup_labruntime.rs  concurrency_fault_matrix.rs  connector_host_runtime_integration.rs  connector_registry_transparency_integration.rs  cross_module_integration.rs  daemon_integration.rs  degradation_edge_cases.rs  diagnostic_labruntime.rs  distributed_edge_cases.rs  distributed_labruntime.rs  distributed_merge_dpor.rs  distributed_security_e2e.rs  distributed_streaming_e2e.rs  dry_run_integration.rs  e2e_agent_detection_filesystem.rs  e2e_migration_quality_gate.rs  e2e_swarm_stress_core.rs  egress_tap_integration.rs  environment_detection_tests.rs  event_annotation_tests.rs  events_labruntime.rs  explainability_e2e.rs  export_labruntime.rs  fleet_scrollback_integration.rs  fork_hardening_tests.rs  framework_seam_guard.rs  frankensearch_integration.rs  (+754 more)
crates/frankenterm-gui/: Cargo.toml  build.rs  frankenterm.toml
crates/frankenterm-gui/src/: colorease.rs  commands.rs  customglyph.rs  dashboard.rs  frontend.rs  glyphcache.rs  lua_stubs.rs  main.rs  native_bridge.rs  quad.rs  renderstate.rs  selection.rs  spawn.rs  stats.rs  tabbar.rs  update.rs
crates/frankenterm-mux-server/: Cargo.toml
crates/frankenterm-mux-server-impl/: Cargo.toml
crates/frankenterm-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  pki.rs  sessionhandler.rs
crates/frankenterm-mux-server/src/: main.rs  ossl.rs
crates/frankenterm/src/: main.rs  mcp.rs
crates/frankenterm/tests/: cli_contract_tests.rs  docs_smoke.rs
frankenterm/cell/: Cargo.toml
frankenterm/cell/src/: color.rs  image.rs  lib.rs
frankenterm/char-props/: Cargo.toml
frankenterm/char-props/benches/: wcwidth.rs
frankenterm/char-props/codegen/: Cargo.toml
frankenterm/char-props/src/: emoji.rs  nerdfonts.rs  widechar_width.rs
frankenterm/config/: Cargo.toml
frankenterm/config/benches/: config_loading.rs
frankenterm/config/derive/: Cargo.toml
frankenterm/config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  detection.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  migrate.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  toml_config.rs  units.rs  unix.rs  wasm_config.rs  window.rs  wsl.rs
frankenterm/escape-parser/: Cargo.toml
frankenterm/escape-parser/src/: apc.rs  color.rs  (+6 more)
frankenterm/mux/: Cargo.toml
frankenterm/promise/: Cargo.toml
frankenterm/scripting/: Cargo.toml
frankenterm/surface/: Cargo.toml
frankenterm/tabout/: Cargo.toml
frankenterm/term/: Cargo.toml
frankenterm/termwiz/: Cargo.toml
frankenterm/uds/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fts_query.rs  osc_marker_parser.rs  pattern_pack_parser.rs  resize_scheduler_lifecycle.rs
fuzz/src/: lib.rs
(+1087 files in other folders)
