[workspace]
resolver = "2"
members = [
    "crates/frankenterm",
    "crates/frankenterm-core",
    "fuzz",
    # FrankenTerm crates (ex-WezTerm, owned in-tree)
    "frankenterm/async_ossl",
    "frankenterm/base91",
    "frankenterm/bidi",
    "frankenterm/bintree",
    "frankenterm/codec",
    "frankenterm/color-types",
    "frankenterm/config",
    "frankenterm/config/derive",
    "frankenterm/filedescriptor",
    "frankenterm/lua-api-crates/termwiz-funcs",
    "frankenterm/luahelper",
    "frankenterm/mux",
    "frankenterm/procinfo",
    "frankenterm/promise",
    "frankenterm/pty",
    "frankenterm/rangeset",
    "frankenterm/term",
    "frankenterm/termwiz",
    "frankenterm/umask",
    "frankenterm/vtparse",
    "frankenterm/blob-leases",
    "frankenterm/cell",
    "frankenterm/char-props",
    "frankenterm/dynamic",
    "frankenterm/dynamic/derive",
    "frankenterm/escape-parser",
    "frankenterm/input-types",
    "frankenterm/ssh",
    "frankenterm/surface",
    "frankenterm/uds",
]
exclude = [
    "frankenterm/char-props/codegen",
    "frankenterm/bidi/generate",
]

# Limit default workspace operations (check/clippy/test) to the ft crates.
# Vendored WezTerm-derived crates are still built as dependencies, but aren't
# clippy-linted as primary targets under `cargo clippy --all-targets`.
default-members = ["crates/frankenterm", "crates/frankenterm-core", "fuzz"]

# Crate boundary rules:
# - frankenterm-core: business logic only (no UI/transport deps by default)
# - frankenterm: thin CLI wrapper over frankenterm-core
# - optional frontends (mcp/web/tui/browser) are feature-gated

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Dicklesworthstone"]
license = "MIT"
repository = "https://github.com/Dicklesworthstone/frankenterm"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Use explicit priorities to avoid conflicts
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for stubs
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
# Nursery lints that are too noisy for stub code
unused_async = "allow"
collection_is_never_read = "allow"
missing_const_for_fn = "allow"
# Cargo lints - we don't have full metadata yet
multiple_crate_versions = "allow"
# Vendored WezTerm crates carry upstream feature names (e.g. use_serde/no_std)
# that we don't want to rename in-tree.
redundant_feature_names = "allow"
negative_feature_names = "allow"
# Style lints that conflict with panic!/assert! macros in tests
uninlined_format_args = "allow"
# Range patterns lint that's too strict
manual_range_patterns = "allow"
# Safe sign casts for timestamps
cast_sign_loss = "allow"
# Same arms are acceptable for clarity
match_same_arms = "allow"
# Doc link style
doc_link_with_quotes = "allow"
# Structs with bools for configuration
struct_excessive_bools = "allow"
# String formatting style - push_str is fine
format_push_string = "allow"
# if let/else with Options is clearer than map_or_else for complex cases
option_if_let_else = "allow"
# Truncation is acceptable for timestamps
cast_possible_truncation = "allow"
# Many args are acceptable for CLI commands
too_many_arguments = "allow"
# Branches sharing code is fine for clarity
branches_sharing_code = "allow"
# Redundant closures sometimes needed for type inference
redundant_closure_for_method_calls = "allow"
# #[must_use] too noisy for internal functions
must_use_candidate = "allow"
# Underscore bindings for API consistency
used_underscore_binding = "allow"
# Constant assertions legitimate in tests
assertions_on_constants = "allow"
# Default::default() clearer in some contexts
default_trait_access = "allow"
# Significant drops can be intentional
significant_drop_in_scrutinee = "allow"
# Clone sometimes needed for borrow checker
redundant_clone = "allow"
# Struct field naming flexibility
struct_field_names = "allow"
# usize/i64 casts acceptable for database
cast_possible_wrap = "allow"
# map_unwrap_or - closure form clearer in some contexts
map_unwrap_or = "allow"
# Field default assignment sometimes clearer
field_reassign_with_default = "allow"
# Cast precision loss acceptable for stats
cast_precision_loss = "allow"
# u64 to f64 casts acceptable for ratios
cast_lossless = "allow"
# Temporary drops can be intentional
significant_drop_tightening = "allow"
# Use same type repetition for clarity
use_self = "allow"
# Single char patterns allowed
single_char_pattern = "allow"
# Debug impl flexibility
missing_fields_in_debug = "allow"
# Doc length flexibility
too_long_first_doc_paragraph = "allow"
# Unnecessary wraps acceptable for error handling consistency
unnecessary_wraps = "allow"
# Default unit struct construction acceptable
default_constructed_unit_structs = "allow"
# Pass by value acceptable for small types
needless_pass_by_value = "allow"
# Sort on primitives acceptable
stable_sort_primitive = "allow"
# Bool not operations acceptable for clarity
nonminimal_bool = "allow"
# If collapse not always clearer
collapsible_if = "allow"
# Format! usage acceptable
useless_format = "allow"
# Derivable impls flexibility
derivable_impls = "allow"
# if not else sometimes clearer
if_not_else = "allow"
# Literal strings with format args acceptable for template patterns
literal_string_with_formatting_args = "allow"
# Let return acceptable for clarity
let_and_return = "allow"
# Useless conversion acceptable for type clarity
useless_conversion = "allow"
# Long literals acceptable for constants
unreadable_literal = "allow"
# assert_eq with bool acceptable for clarity
bool_assert_comparison = "allow"
# Match for destructuring acceptable
single_match = "allow"
# Vec parameter acceptable for ownership transfer
ptr_arg = "allow"
# Large stack allocations acceptable
large_stack_frames = "allow"
# Some test-only code paths use large local arrays; prefer correctness over
# clippy pedantry here.
large_stack_arrays = "allow"
# Manual let else acceptable
manual_let_else = "allow"
# Format strings acceptable
print_literal = "allow"
# to_string on deref acceptable
str_to_string = "allow"
# Items after statements acceptable in some contexts
items_after_statements = "allow"
# Single match acceptable for clarity
single_match_else = "allow"
# Implicit to_string acceptable
implicit_clone = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.38.0", features = ["bundled", "backup", "functions"] }

# Pattern matching
aho-corasick = "1.1.4"
memchr = "2.7.6"
fancy-regex = { version = "0.14", default-features = false }
regex = "1.12.2"
bloomfilter = "1.0"

# Crypto / randomness
rand = "0.9.2"
sha2 = "0.10.9"
x509-parser = "0.18.0"

# Config
toml = "0.8.23"
toml_edit = "0.24.0"
serde_yaml = "0.9.34"

# Serialization
toon_rust = { git = "https://github.com/Dicklesworthstone/toon_rust", branch = "master" }

# FrankenTerm crates (in-tree, ex-WezTerm)
async_ossl = { path = "frankenterm/async_ossl" }
base91 = { path = "frankenterm/base91" }
bintree = { path = "frankenterm/bintree" }
codec = { path = "frankenterm/codec" }
config = { path = "frankenterm/config" }
filedescriptor = { version = "0.8.3", path = "frankenterm/filedescriptor" }
luahelper = { path = "frankenterm/luahelper" }
mux = { path = "frankenterm/mux" }
portable-pty = { path = "frankenterm/pty" }
procinfo = { path = "frankenterm/procinfo" }
promise = { path = "frankenterm/promise" }
rangeset = { path = "frankenterm/rangeset" }
termwiz = { version = "0.24.0", path = "frankenterm/termwiz" }
termwiz-funcs = { path = "frankenterm/lua-api-crates/termwiz-funcs" }
umask = { path = "frankenterm/umask" }
vtparse = { version = "0.7", path = "frankenterm/vtparse", default-features = false }
frankenterm-bidi = { version = "0.2.3", path = "frankenterm/bidi", default-features = false }
frankenterm-blob-leases = { version = "0.1.1", path = "frankenterm/blob-leases" }
frankenterm-cell = { path = "frankenterm/cell" }
frankenterm-char-props = { path = "frankenterm/char-props", default-features = false }
frankenterm-color-types = { version = "0.3", path = "frankenterm/color-types", default-features = false }
frankenterm-config-derive = { version = "0.1", path = "frankenterm/config/derive" }
frankenterm-dynamic = { version = "0.2.1", path = "frankenterm/dynamic", default-features = false }
frankenterm-dynamic-derive = { version = "0.1.1", path = "frankenterm/dynamic/derive" }
frankenterm-escape-parser = { version = "0.1.0", path = "frankenterm/escape-parser" }
frankenterm-input-types = { version = "0.1", path = "frankenterm/input-types", default-features = false }
frankenterm-ssh = { path = "frankenterm/ssh" }
frankenterm-surface = { path = "frankenterm/surface" }
frankenterm-term = { path = "frankenterm/term" }
frankenterm-uds = { path = "frankenterm/uds" }

# External deps needed by FrankenTerm crates
assert_fs = "1.0.4"
async-executor = "1.11"
async-io = "2.3"
async-task = "4.7"
async-trait = "0.1"
base64 = { version = "0.22", default-features = false }
bitflags = "1.3"
bstr = "1.0"
camino = "1.0"
cassowary = "0.3"
colorgrad = "0.6"
crossbeam = "0.8"
csscolorparser = "0.6"
deltae = "0.3"
dirs-next = "2.0"
downcast-rs = "1.0"
enum-display-derive = "0.1"
env_logger = "0.11"
euclid = { version = "0.22", default-features = false }
filenamegen = "0.2.6"
finl_unicode = { version = "1.3", git = "https://github.com/wez/finl_unicode.git", branch = "no_std", default-features = false, features = ["categories", "grapheme_clusters"] }
fixedbitset = { version = "0.4", default-features = false }
flume = "0.11"
fnv = "1.0"
futures = "0.3"
gethostname = "0.5"
heapless = "0.8"
hex = { version = "0.4", default-features = false }
hostname = "0.4"
humansize = "2.1"
image = "0.25"
k9 = "0.12.0"
lazy_static = "1.4"
leb128 = "0.2"
libc = "0.2"
libssh-rs = "0.3.6"
lru = "0.16"
maplit = "1.0"
memmem = "0.1"
metrics = "0.23"
miniz_oxide = "0.7"
mlua = "0.9"
names = { version = "0.12", default-features = false }
nix = "0.29"
ntapi = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
openssl = "0.10.57"
ordered-float = { version = "4.1", default-features = false }
parking_lot = "0.12"
passfd = "0.1.6"
percent-encoding = "2.3"
pest = "2.7"
pest_derive = "2.7"
phf = { version = "0.11", default-features = false }
predicates = "3.0"
proc-macro2 = "1.0"
quote = "1.0.2"
rstest = "0.21"
serial2 = "0.2"
shared_library = "0.1"
shell-words = "1.1"
shlex = "1.1"
signal-hook = "0.3"
siphasher = "1.0.1"
smol = "2.0"
socket2 = "0.5"
ssh2 = "0.9.3"
strsim = "0.11"
syn = "1.0"
tempfile = "3.20"
terminfo = "0.9"
termios = "0.3"
textwrap = "0.16"
ucd-trie = { version = "0.1", default-features = false }
uds_windows = "1.1"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12"
url = "2"
utf8parse = "0.2"
uuid = "1.13"
varbincode = "0.1"
whoami = "1.5"
winapi = "0.3.9"
winreg = "0.10"
zstd = "0.11"

# Notify: upstream uses 5.0, we use 8.x for frankenterm crates.
# FrankenTerm config crate pins to 5.0 until migrated.
notify = "5.0.0"

# File locking
fs2 = "0.4.3"

# TUI (optional)
ratatui = "0.30.0"
crossterm = "0.29.0"

# FrankenTUI (optional, migration target for TUI — see docs/adr/0001-adopt-frankentui-for-tui-migration.md)
# Git dep; use .cargo/config.toml for local path overrides during development.
ftui = { git = "https://github.com/Dicklesworthstone/frankentui", default-features = false, features = ["runtime"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# FastMCP (optional MCP server dependencies)
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync" }
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", branch = "master" }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
glob = "0.3"
console = "0.15"
getrandom = "0.3"
trybuild = { version = "1", default-features = false }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
fastmcp = { git = "https://github.com/Dicklesworthstone/fastmcp_rust", package = "fastmcp-rust" }
fastmcp-core = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-transport = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-protocol = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-server = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-client = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-macros = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastmcp-console = { git = "https://github.com/Dicklesworthstone/fastmcp_rust" }
fastapi = { git = "https://github.com/Dicklesworthstone/fastapi_rust", package = "fastapi-rust" }
fastapi-core = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }
fastapi-http = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }
fastapi-router = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }
fastapi-macros = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }
fastapi-openapi = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }
fastapi-output = { git = "https://github.com/Dicklesworthstone/fastapi_rust" }

# Internal crates
frankenterm-core = { path = "crates/frankenterm-core" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

# Provide git-based versions of crates that upstream repos (fastmcp_rust, fastapi_rust)
# reference as path deps pointing outside their own repo (../asupersync, ../rich_rust).
# Without these patches, cargo cannot resolve those transitive path deps when fetching
# the upstream repos as git dependencies.
[patch.crates-io]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync" }
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", branch = "master" }

[patch."https://github.com/Dicklesworthstone/fastmcp_rust"]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync" }
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", branch = "master" }

[patch."https://github.com/Dicklesworthstone/fastapi_rust"]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync" }
