[workspace]
resolver = "2"
members = [
    "crates/frankenterm",
    "crates/frankenterm-core",
    "crates/frankenterm-gui",
    "crates/frankenterm-mux-server",
    "crates/frankenterm-mux-server-impl",
    "crates/frankenterm-alloc",
    "fuzz",
    # FrankenTerm crates (ex-WezTerm, owned in-tree)
    "frankenterm/async_ossl",
    "frankenterm/base91",
    "frankenterm/bidi",
    "frankenterm/bintree",
    "frankenterm/codec",
    "frankenterm/color-types",
    "frankenterm/config",
    "frankenterm/config/derive",
    "frankenterm/filedescriptor",
    "frankenterm/lua-api-crates/termwiz-funcs",
    "frankenterm/luahelper",
    "frankenterm/mux",
    "frankenterm/procinfo",
    "frankenterm/promise",
    "frankenterm/pty",
    "frankenterm/rangeset",
    "frankenterm/term",
    "frankenterm/termwiz",
    "frankenterm/umask",
    "frankenterm/vtparse",
    "frankenterm/blob-leases",
    "frankenterm/cell",
    "frankenterm/char-props",
    "frankenterm/dynamic",
    "frankenterm/dynamic/derive",
    "frankenterm/escape-parser",
    "frankenterm/input-types",
    "frankenterm/ssh",
    "frankenterm/scripting",
    "frankenterm/surface",
    "frankenterm/uds",
    # GUI-layer crates (vendored from legacy_wezterm, ft-1memj.2)
    "frankenterm/frecency",
    "frankenterm/lfucache",
    "frankenterm/ratelim",
    "frankenterm/gui-subcommands",
    "frankenterm/toast-notification",
    "frankenterm/open-url",
    "frankenterm/window",
    "frankenterm/font",
    "frankenterm/client",
    # Vendored C library crates (freetype/harfbuzz/fontconfig)
    "frankenterm/deps-freetype",
    "frankenterm/deps-harfbuzz",
    "frankenterm/deps-fontconfig",
    # GUI bootstrap crates (ft-1memj.3)
    "frankenterm/tabout",
    "frankenterm/lua-api-crates/mux-lua",
    "frankenterm/lua-api-crates/url-funcs",
]
exclude = [
    "frankenterm/char-props/codegen",
    "frankenterm/bidi/generate",
]

# Limit default workspace operations (check/clippy/test) to the ft crates.
# Vendored WezTerm-derived crates are still built as dependencies, but aren't
# clippy-linted as primary targets under `cargo clippy --all-targets`.
default-members = [
    "crates/frankenterm",
    "crates/frankenterm-core",
    "crates/frankenterm-gui",
    "crates/frankenterm-mux-server",
    "crates/frankenterm-mux-server-impl",
    "crates/frankenterm-alloc",
    "fuzz",
]

# Crate boundary rules:
# - frankenterm-core: business logic only (no UI/transport deps by default)
# - frankenterm: thin CLI wrapper over frankenterm-core
# - optional frontends (mcp/web/tui/browser) are feature-gated

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Dicklesworthstone"]
license-file = "LICENSE"
repository = "https://github.com/Dicklesworthstone/frankenterm"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Use explicit priorities to avoid conflicts
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for stubs
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
# Nursery lints that are too noisy for stub code
unused_async = "allow"
collection_is_never_read = "allow"
missing_const_for_fn = "allow"
# Cargo lints - we don't have full metadata yet
multiple_crate_versions = "allow"
# Vendored WezTerm crates carry upstream feature names (e.g. use_serde/no_std)
# that we don't want to rename in-tree.
redundant_feature_names = "allow"
negative_feature_names = "allow"
# Style lints that conflict with panic!/assert! macros in tests
uninlined_format_args = "allow"
# Range patterns lint that's too strict
manual_range_patterns = "allow"
# Safe sign casts for timestamps
cast_sign_loss = "allow"
# Same arms are acceptable for clarity
match_same_arms = "allow"
# Doc link style
doc_link_with_quotes = "allow"
# Structs with bools for configuration
struct_excessive_bools = "allow"
# String formatting style - push_str is fine
format_push_string = "allow"
# if let/else with Options is clearer than map_or_else for complex cases
option_if_let_else = "allow"
# Truncation is acceptable for timestamps
cast_possible_truncation = "allow"
# Many args are acceptable for CLI commands
too_many_arguments = "allow"
# Branches sharing code is fine for clarity
branches_sharing_code = "allow"
# Redundant closures sometimes needed for type inference
redundant_closure_for_method_calls = "allow"
# #[must_use] too noisy for internal functions
must_use_candidate = "allow"
# Underscore bindings for API consistency
used_underscore_binding = "allow"
# Constant assertions legitimate in tests
assertions_on_constants = "allow"
# Default::default() clearer in some contexts
default_trait_access = "allow"
# Significant drops can be intentional
significant_drop_in_scrutinee = "allow"
# Clone sometimes needed for borrow checker
redundant_clone = "allow"
# Struct field naming flexibility
struct_field_names = "allow"
# usize/i64 casts acceptable for database
cast_possible_wrap = "allow"
# map_unwrap_or - closure form clearer in some contexts
map_unwrap_or = "allow"
# Field default assignment sometimes clearer
field_reassign_with_default = "allow"
# Cast precision loss acceptable for stats
cast_precision_loss = "allow"
# u64 to f64 casts acceptable for ratios
cast_lossless = "allow"
# Temporary drops can be intentional
significant_drop_tightening = "allow"
# Use same type repetition for clarity
use_self = "allow"
# Single char patterns allowed
single_char_pattern = "allow"
# Debug impl flexibility
missing_fields_in_debug = "allow"
# Doc length flexibility
too_long_first_doc_paragraph = "allow"
# Unnecessary wraps acceptable for error handling consistency
unnecessary_wraps = "allow"
# Default unit struct construction acceptable
default_constructed_unit_structs = "allow"
# Pass by value acceptable for small types
needless_pass_by_value = "allow"
# Sort on primitives acceptable
stable_sort_primitive = "allow"
# Bool not operations acceptable for clarity
nonminimal_bool = "allow"
# If collapse not always clearer
collapsible_if = "allow"
# Format! usage acceptable
useless_format = "allow"
# Derivable impls flexibility
derivable_impls = "allow"
# if not else sometimes clearer
if_not_else = "allow"
# Literal strings with format args acceptable for template patterns
literal_string_with_formatting_args = "allow"
# Let return acceptable for clarity
let_and_return = "allow"
# Useless conversion acceptable for type clarity
useless_conversion = "allow"
# Long literals acceptable for constants
unreadable_literal = "allow"
# assert_eq with bool acceptable for clarity
bool_assert_comparison = "allow"
# Match for destructuring acceptable
single_match = "allow"
# Vec parameter acceptable for ownership transfer
ptr_arg = "allow"
# Large stack allocations acceptable
large_stack_frames = "allow"
# Some test-only code paths use large local arrays; prefer correctness over
# clippy pedantry here.
large_stack_arrays = "allow"
# Manual let else acceptable
manual_let_else = "allow"
# Format strings acceptable
print_literal = "allow"
# to_string on deref acceptable
str_to_string = "allow"
# Items after statements acceptable in some contexts
items_after_statements = "allow"
# Single match acceptable for clarity
single_match_else = "allow"
# Implicit to_string acceptable
implicit_clone = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.22"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.38.0", features = ["bundled", "backup", "functions"] }

# Allocator (optional)
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }

# Pattern matching
aho-corasick = "1.1.4"
memchr = "2.7.6"
fancy-regex = { version = "0.14", default-features = false }
regex = "1.12.2"
bloomfilter = "1.0"

# Crypto / randomness
rand = "0.9.2"
sha2 = "0.10.9"
x509-parser = "0.18.0"

# Config
toml = "0.8.23"
toml_edit = "0.24.0"
serde_yaml = "0.9.34"

# Serialization
toon_rust = { version = "0.2.0", git = "https://github.com/Dicklesworthstone/toon_rust", rev = "d48c5b55caeedc99368a1461535b7e0c143afe06", package = "tru" }

# FrankenTerm crates (in-tree, ex-WezTerm)
async_ossl = { path = "frankenterm/async_ossl" }
base91 = { path = "frankenterm/base91" }
bintree = { path = "frankenterm/bintree" }
codec = { path = "frankenterm/codec" }
config = { path = "frankenterm/config" }
filedescriptor = { version = "0.8.3", path = "frankenterm/filedescriptor" }
luahelper = { path = "frankenterm/luahelper" }
mux = { path = "frankenterm/mux" }
portable-pty = { path = "frankenterm/pty" }
procinfo = { path = "frankenterm/procinfo" }
promise = { path = "frankenterm/promise" }
rangeset = { path = "frankenterm/rangeset" }
termwiz = { version = "0.24.0", path = "frankenterm/termwiz" }
termwiz-funcs = { path = "frankenterm/lua-api-crates/termwiz-funcs" }
umask = { path = "frankenterm/umask" }
vtparse = { version = "0.7", path = "frankenterm/vtparse", default-features = false }
frankenterm-bidi = { version = "0.2.3", path = "frankenterm/bidi", default-features = false }
frankenterm-blob-leases = { version = "0.1.1", path = "frankenterm/blob-leases" }
frankenterm-cell = { path = "frankenterm/cell" }
frankenterm-char-props = { path = "frankenterm/char-props", default-features = false }
frankenterm-color-types = { version = "0.3", path = "frankenterm/color-types", default-features = false }
frankenterm-config-derive = { version = "0.1", path = "frankenterm/config/derive" }
frankenterm-dynamic = { version = "0.2.1", path = "frankenterm/dynamic", default-features = false }
frankenterm-dynamic-derive = { version = "0.1.1", path = "frankenterm/dynamic/derive" }
frankenterm-escape-parser = { version = "0.1.0", path = "frankenterm/escape-parser" }
frankenterm-input-types = { version = "0.1", path = "frankenterm/input-types", default-features = false }
frankenterm-ssh = { path = "frankenterm/ssh" }
frankenterm-scripting = { path = "frankenterm/scripting" }
frankenterm-surface = { path = "frankenterm/surface" }
frankenterm-term = { path = "frankenterm/term" }
frankenterm-uds = { path = "frankenterm/uds" }
frecency = { path = "frankenterm/frecency" }
lfucache = { path = "frankenterm/lfucache" }
ratelim = { path = "frankenterm/ratelim" }
frankenterm-gui-subcommands = { path = "frankenterm/gui-subcommands" }
wezterm-toast-notification = { path = "frankenterm/toast-notification" }
wezterm-open-url = { path = "frankenterm/open-url" }
window = { path = "frankenterm/window" }
wezterm-font = { path = "frankenterm/font", features = ["vendor-jetbrains", "vendor-roboto", "vendor-noto-emoji", "vendor-nerd-font-symbols"] }
wezterm-client = { path = "frankenterm/client" }
# Workspace-level name aliases: legacy crate names → vendored frankenterm-* packages.
# These let vendored GUI-layer crates (window, font, client) resolve their deps
# using the original WezTerm dep names without modifying every Cargo.toml.
wezterm-bidi = { path = "frankenterm/bidi", package = "frankenterm-bidi" }
wezterm-term = { path = "frankenterm/term", package = "frankenterm-term" }
wezterm-color-types = { path = "frankenterm/color-types", package = "frankenterm-color-types" }
wezterm-input-types = { path = "frankenterm/input-types", package = "frankenterm-input-types" }
wezterm-dynamic = { path = "frankenterm/dynamic", package = "frankenterm-dynamic" }
wezterm-blob-leases = { path = "frankenterm/blob-leases", package = "frankenterm-blob-leases" }
wezterm-ssh = { path = "frankenterm/ssh", package = "frankenterm-ssh" }
wezterm-uds = { path = "frankenterm/uds", package = "frankenterm-uds" }

# External deps needed by FrankenTerm crates
assert_fs = "1.0.4"
async-executor = "1.11"
async-io = "2.3"
async-task = "4.7"
async-trait = "0.1"
base64 = { version = "0.22", default-features = false }
bitflags = "1.3"
bstr = "1.0"
camino = "1.0"
cassowary = "0.3"
colorgrad = "0.6"
crossbeam = "0.8"
csscolorparser = "0.6"
deltae = "0.3"
dirs-next = "2.0"
downcast-rs = "1.0"
enum-display-derive = "0.1"
env_logger = "0.11"
euclid = { version = "0.22", default-features = false }
filenamegen = "0.2.6"
finl_unicode = { version = "1.3", git = "https://github.com/wez/finl_unicode.git", branch = "no_std", default-features = false, features = ["categories", "grapheme_clusters"] }
fixedbitset = { version = "0.4", default-features = false }
flume = "0.11"
fnv = "1.0"
futures = "0.3"
gethostname = "0.5"
heapless = "0.8"
hex = { version = "0.4", default-features = false }
hostname = "0.4"
humansize = "2.1"
image = "0.25"
k9 = "0.12.0"
lazy_static = "1.4"
leb128 = "0.2"
libc = "0.2"
libssh-rs = "0.3.6"
lru = "0.16"
maplit = "1.0"
memmem = "0.1"
metrics = "0.23"
miniz_oxide = "0.7"
mlua = "0.9"
names = { version = "0.12", default-features = false }
nix = "0.29"
ntapi = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
openssl = "0.10.57"
ordered-float = { version = "4.1", default-features = false }
parking_lot = "0.12"
passfd = "0.1.6"
percent-encoding = "2.3"
pest = "2.7"
pest_derive = "2.7"
phf = { version = "0.11", default-features = false }
predicates = "3.0"
proc-macro2 = "1.0"
quote = "1.0.2"
rstest = "0.21"
serial2 = "0.2"
shared_library = "0.1"
shell-words = "1.1"
shlex = "1.1"
signal-hook = "0.3"
siphasher = "1.0.1"
smol = "2.0"
socket2 = "0.5"
ssh2 = "0.9.3"
strsim = "0.11"
syn = "1.0"
tempfile = "3.20"
terminfo = "0.9"
termios = "0.3"
textwrap = "0.16"
ucd-trie = { version = "0.1", default-features = false }
uds_windows = "1.1"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12"
url = "2"
utf8parse = "0.2"
uuid = "1.13"
varbincode = "0.1"
whoami = "1.5"
winapi = "0.3.9"
winreg = "0.10"
zstd = "0.11"

# GUI-layer dependencies (vendored from legacy_wezterm, ft-1memj.2)
serde_with = { version = "2.0", features = ["chrono_0_4"] }
ahash = "0.8"
intrusive-collections = "0.9"
governor = { version = "0.5", default-features = false, features = ["std"] }
async-channel = "2.3"
bytes = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
cairo-rs = { version = "0.18", default-features = false }
encoding_rs = "0.8"
gl_generator = "0.14"
glium = { version = "0.35", default-features = false }
guillotiere = "0.6"
libloading = "0.8"
line_drawing = "0.8"
memmap2 = "0.9"
raw-window-handle = "0.6"
resize = "0.5"
tiny-skia = "0.11"
walkdir = "2"
# Vendored native deps (freetype, harfbuzz, fontconfig) and their build deps
freetype = { path = "frankenterm/deps-freetype" }
harfbuzz = { path = "frankenterm/deps-harfbuzz" }
fontconfig = { path = "frankenterm/deps-fontconfig" }
fixed = "1.23"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
# macOS GUI deps
cgl = "0.3"
cocoa = "=0.25.0"
core-foundation = "=0.10.0"
core-graphics = "=0.24.0"
core-text = "=21.0.0"
objc = "0.2"
objc2 = "0.6"
objc2-core-graphics = "0.3"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"
plist = "1.7"
# Linux/X11/Wayland deps (for window crate)
futures-lite = "2.3"
futures-util = "0.3"
mio = "0.8"
x11 = "2.21"
xcb = "1.3"
xcb-imdkit = { version = "0.3", git = "https://github.com/wezterm/xcb-imdkit-rs.git", rev = "212330f7c6c37794d78061a773e8f4f9e4785bbb" }
xkbcommon = "0.7.0"
zbus = "4.2"
zvariant = "4.0"
smithay-client-toolkit = { version = "0.19", default-features = false }
wayland-backend = "0.3.5"
wayland-protocols = "0.32"
wayland-protocols-plasma = { version = "0.3.6", features = ["client"] }
wayland-client = "0.31"
wayland-egl = "0.32"
# Windows GUI deps
clipboard-win = "2.2"
windows = "0.33.0"
dwrote = "0.11"
# Other GUI-layer deps
xml-rs = "0.8"
dns-lookup = "2.0"
rcgen = "0.12"
# GUI binary deps (wezterm-gui, ft-1memj.3)
emojis = "0.6"
fastrand = "2.0"
hdrhistogram = "7.1"
http_req = "0.11"
nucleo-matcher = "0.3"
rayon = "1.10"
wgpu = "25.0.2"
# Additional GUI-layer workspace aliases
wezterm-gui-subcommands = { path = "frankenterm/gui-subcommands", package = "frankenterm-gui-subcommands" }
wezterm-escape-parser = { path = "frankenterm/escape-parser", package = "frankenterm-escape-parser" }
wezterm-surface = { path = "frankenterm/surface", package = "frankenterm-surface" }
# GUI bootstrap crates (ft-1memj.3)
tabout = { path = "frankenterm/tabout" }
mux-lua = { path = "frankenterm/lua-api-crates/mux-lua" }
url-funcs = { path = "frankenterm/lua-api-crates/url-funcs" }
frankenterm-mux-server-impl = { path = "crates/frankenterm-mux-server-impl" }

# Notify: upstream uses 5.0, we use 8.x for frankenterm crates.
# FrankenTerm config crate pins to 5.0 until migrated.
notify = "5.0.0"

# File locking
fs2 = "0.4.3"
flate2 = "1.1.0"

# TUI (optional)
ratatui = "0.30.0"
crossterm = "0.29.0"

# FrankenTUI (optional, migration target for TUI — see docs/adr/0001-adopt-frankentui-for-tui-migration.md)
# Git dep; use .cargo/config.toml for local path overrides during development.
ftui = { version = "0.2.0", git = "https://github.com/Dicklesworthstone/frankentui", rev = "18facd3f2a2c51b8b06ff589e6b905e6a63f5a96", default-features = false, features = ["runtime"] }

# ZIP archives (for .ftx extension packages)
zip = { version = "2", default-features = false, features = ["deflate"] }

# WASM runtime (optional, for scripting/extensions)
wasmtime = { version = "41", default-features = false, features = ["cranelift", "async", "component-model", "runtime", "std"] }
wasmtime-wasi = { version = "41", default-features = false, features = ["p1"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# FastMCP (optional MCP server dependencies)
asupersync = { version = "0.2.9" }
asupersync-macros = { version = "0.2.9" }
rich_rust = { version = "0.2.0" }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
glob = "0.3"
console = "0.15"
getrandom = "0.3"
trybuild = { version = "1", default-features = false }
rustls = "0.23"
rustls-pemfile = "2"
fastmcp = { version = "0.2.0", git = "https://github.com/Dicklesworthstone/fastmcp_rust", rev = "884d45b173f691682d23e20aa6089bf4115705b8", package = "fastmcp-rust" }
fastapi = { version = "0.2.0", package = "fastapi-rust" }

# FrankenSearch (optional integration, enabled via frankenterm-core feature flag)
# Pinned to a specific rev of the upstream GitHub repo for reproducibility.
frankensearch = { git = "https://github.com/Dicklesworthstone/frankensearch", rev = "7086d9646520e8c0d4908a88d0854a7f979f1580", package = "frankensearch", default-features = false, features = ["hybrid"] }
# Agent detection (optional integration, enabled via frankenterm-core feature flag)
franken-agent-detection = "0.1.0"

# Internal crates
frankenterm-core = { path = "crates/frankenterm-core", default-features = false }
frankenterm-alloc = { path = "crates/frankenterm-alloc" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

# Provide git-based versions of crates that upstream repos (fastmcp_rust, fastapi_rust)
# reference as path deps pointing outside their own repo (../asupersync, ../rich_rust).
# Without these patches, cargo cannot resolve those transitive path deps when fetching
# the upstream repos as git dependencies.
[patch.crates-io]
# Pin git revs to avoid branch drift and to keep the dependency graph single-sourced.
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", rev = "478c1be6bb701d583608057e1f1b882119fbaf56" }
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "bbfaa67fd5a4e266e27a1ca3af0acde5257a4feb" }

[patch."https://github.com/Dicklesworthstone/fastmcp_rust"]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "bbfaa67fd5a4e266e27a1ca3af0acde5257a4feb" }
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", rev = "478c1be6bb701d583608057e1f1b882119fbaf56" }

[patch."https://github.com/Dicklesworthstone/fastapi_rust"]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "bbfaa67fd5a4e266e27a1ca3af0acde5257a4feb" }

[patch."https://github.com/Dicklesworthstone/frankensearch"]
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", rev = "bbfaa67fd5a4e266e27a1ca3af0acde5257a4feb" }
